// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for state: neutral and theme: dark 1`] = `
":host {
  display: grid;
  grid-template-columns: 1fr auto;
  grid-template-rows: auto;
  grid-row-gap: 1rem;
  align-items: start;
  justify-items: start;
  padding: 1rem;
  background: #c7e4ff;
  border-left: 0.25rem solid #2193ff;
  box-shadow: 0 0.125rem 0.25rem 0 rgba(0,0,0,0.05),0 0.9375rem 1.25rem 0 rgba(0,0,0,0.2);
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto 1fr auto auto;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
.close {
  margin-left: 1rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    margin-right: 0.5rem;
    color: #0061bd;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: neutral and theme: light 1`] = `
":host {
  display: grid;
  grid-template-columns: 1fr auto;
  grid-template-rows: auto;
  grid-row-gap: 1rem;
  align-items: start;
  justify-items: start;
  padding: 1rem;
  background: #e5eff8;
  border-left: 0.25rem solid #0061bd;
  box-shadow: 0 0.125rem 0.25rem 0 rgba(0,0,0,0.05),0 0.9375rem 1.25rem 0 rgba(0,0,0,0.2);
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto 1fr auto auto;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
.close {
  margin-left: 1rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    margin-right: 0.5rem;
    color: #0061bd;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: success and theme: dark 1`] = `
":host {
  display: grid;
  grid-template-columns: 1fr auto;
  grid-template-rows: auto;
  grid-row-gap: 1rem;
  align-items: start;
  justify-items: start;
  padding: 1rem;
  background: #bfeec6;
  border-left: 0.25rem solid #01ba1d;
  box-shadow: 0 0.125rem 0.25rem 0 rgba(0,0,0,0.05),0 0.9375rem 1.25rem 0 rgba(0,0,0,0.2);
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto 1fr auto auto;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
.close {
  margin-left: 1rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    margin-right: 0.5rem;
    color: #018a16;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: success and theme: light 1`] = `
":host {
  display: grid;
  grid-template-columns: 1fr auto;
  grid-template-rows: auto;
  grid-row-gap: 1rem;
  align-items: start;
  justify-items: start;
  padding: 1rem;
  background: #e5f3e7;
  border-left: 0.25rem solid #018a16;
  box-shadow: 0 0.125rem 0.25rem 0 rgba(0,0,0,0.05),0 0.9375rem 1.25rem 0 rgba(0,0,0,0.2);
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto 1fr auto auto;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
.close {
  margin-left: 1rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    margin-right: 0.5rem;
    color: #018a16;
  }
}
"
`;
